--- a/app/css/main.css
+++ b/app/css/main.css
@@ -68,10 +68,22 @@ body {
   overflow-x: hidden;
 }
 
+body.lock {
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
   display: inline-block;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  white-space: nowrap;
+}
+
+a:hover {
+  color: inherit;
 }
 
 ul {
@@ -113,4 +125,340 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.header__container {
+  height: 90px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.header__logo img {
+  max-width: 100%;
+}
+
+.header__menu {
+  min-height: 100%;
+}
+
+.header__request-btn {
+  margin-left: 40px;
+}
+
+.header__login-menu {
+  margin-left: 20px;
+}
+
+.header__language {
+  margin-left: 25px;
+  margin-right: 19px;
+  text-transform: uppercase;
+}
+
+.nav-menu {
+  height: 100%;
+}
+
+.nav-menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-menu__item {
+  margin: 0 10px;
+}
+
+.nav-menu__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 40px;
+  padding: 5px 15px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 143%;
+  color: #214e41;
+  border: 2px solid white;
+  border-radius: 6px;
+}
+
+.nav-menu__link:hover {
+  border: 2px solid #43806c;
+}
+
+.menu a.parent {
+  padding-right: 25px;
+}
+
+.menu li {
+  position: relative;
+}
+
+.menu__link {
+  padding: 8px 10px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 154%;
+  color: #214e41;
+}
+
+.menu .sub-menu__list {
+  display: none;
+  position: absolute;
+  top: 25px;
+  right: 0;
+  padding-top: 20px;
+}
+
+.menu .sub-menu__list li {
+  background: #e3eeed;
+}
+
+.menu .sub-menu__link {
+  padding: 8px 12px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 154%;
+  color: #214e41;
+}
+
+.menu .sub-menu__link:hover {
+  background-color: #43806c;
+  color: white;
+}
+
+.menu.active .sub-menu__list {
+  display: block;
+}
+
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #43806c;
+  border-radius: 6px;
+}
+
+.btn__link {
+  padding: 10px 14px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 143%;
+  color: #ffffff;
+}
+
+.arrow {
+  position: absolute;
+  right: 10px;
+  top: 8px;
+  width: 10px;
+  height: 10px;
+  border-bottom: 2px solid #43806c;
+  border-left: 2px solid #43806c;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+@media (min-width: 960px) {
+  .menu__list > li:hover .sub-menu__list {
+    display: block;
+  }
+
+  .btn:hover {
+    color: white;
+  }
+
+  .btn:hover.btn {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+}
+
+@media (max-width: 1100px) {
+  .nav-menu__item {
+    margin: 0 6px;
+  }
+
+  .nav-menu__link {
+    padding: 5px 8px;
+  }
+}
+
+@media (max-width: 960px) {
+  .header__container {
+    height: 60px;
+  }
+
+  .nav-menu {
+    display: none;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 100;
+  }
+
+  .nav-menu__list {
+    display: block;
+    overflow: auto;
+    height: 100%;
+    padding: 20px;
+  }
+
+  .nav-menu.active {
+    display: block;
+  }
+
+  .nav-menu__link {
+    font-size: 30px;
+  }
+
+  .menu .sub-menu__list {
+    padding-top: 10px;
+  }
+
+  .header__burger {
+    cursor: pointer;
+    margin-right: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 30px;
+    height: 20px;
+    position: relative;
+  }
+
+  .header__burger span {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    top: 9px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  .header__burger::before,
+  .header__burger::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  .header__burger::after {
+    bottom: 0;
+  }
+
+  .header__burger::before {
+    top: 0;
+  }
+
+  .header__burger.active span {
+    -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+            transform: scale(0);
+  }
+
+  .header__burger.active::after {
+    bottom: 9px;
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+
+  .header__burger.active::before {
+    top: 9px;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+}
+
+@media (max-width: 959px) {
+  .header__request-btn {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .header__request-btn {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .menu__link {
+    padding: 8px 6px;
+  }
+}
+
+@media (max-width: 499px) {
+  .header__login-menu {
+    margin-left: 8px;
+  }
+
+  .header__language {
+    margin-left: 5px;
+    margin-right: 10px;
+  }
+}
+
+@media (min-width: 960px) and (max-width: 1100px) {
+  .header__request-btn {
+    margin-left: 20px;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 1100px) {
+  .header__language {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
