--- a/app/styles/blocks/_header.scss
+++ b/app/styles/blocks/_header.scss
@@ -1,57 +1,287 @@
 .header {
   // .header__container
   &__container {
+    height: 90px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @media (max-width: 960px) {
+      height: 60px;
+    }
   }
 
+  &__navigation {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
   // .header__logo
   &__logo {
+    & img {
+      max-width: 100%;
+    }
   }
 
   // .header__menu
   &__menu {
+    min-height: 100%;
   }
 
   // .header__request-btn
   &__request-btn {
+    margin-left: 40px;
+    @media (min-width: 960px) and (max-width: 1100px) {
+      margin-left: 20px;
+    }
+    @media (max-width: 959px) {
+      margin-left: 0;
+    }
+    @media (max-width: 600px) {
+      display: none;
+    }
+  }
+
+  // .header__login-menu
+  &__login-menu {
+    margin-left: 20px;
+    @media (max-width: 499px) {
+      margin-left: 8px;
+    }
   }
 
   // .header__language
   &__language {
+    margin-left: 25px;
+    margin-right: 19px;
+    text-transform: uppercase;
+    @media (min-width: 500px) and (max-width: 1100px) {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    @media (max-width: 499px) {
+      margin-left: 5px;
+      margin-right: 10px;
+    }
+    &-list {
+      //min-width: 30px;
+    }
+  }
+  &__burger {
   }
 }
 
 .nav-menu {
+  height: 100%;
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+
   // .nav-menu__item
   &__item {
+    margin: 0 10px;
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    padding: 5px 15px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 143%;
+    color: #214e41;
+    border: 2px solid white;
+    border-radius: $btn-border-radius;
+    &:hover {
+      border: 2px solid $accent;
+    }
+  }
+  @media (max-width: 1100px) {
+    &__item {
+      margin: 0 6px;
+    }
+    &__link {
+      padding: 5px 8px;
+    }
+  }
+  @media (max-width: 960px) {
+    display: none;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 100;
+    &__list {
+      display: block;
+      overflow: auto;
+      height: 100%;
+      padding: 20px;
+    }
+    &.active {
+      display: block;
+    }
+    &__link {
+      font-size: 30px;
+    }
   }
 }
 
 .menu {
-  // .menu__list
-  &__list {
+  & a.parent {
+    padding-right: 25px;
   }
-
+  & li {
+    position: relative;
+  }
+  // .menu__list
+  @media (min-width: 960px) {
+    &__list > li:hover .sub-menu__list {
+      display: block;
+    }
+  }
   // .menu__link
   &__link {
+    padding: 8px 10px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 154%;
+    color: #214e41;
+    @media (max-width: 500px) {
+      padding: 8px 6px;
+    }
+  }
+  & .sub-menu {
+    // .sub-menu__list
+    &__list {
+      display: none;
+      position: absolute;
+      top: 25px;
+      right: 0;
+      // min-width: 80px;
+      padding-top: 20px;
+      @media (max-width: 960px) {
+        padding-top: 10px;
+      }
+      & li {
+        background: #e3eeed;
+      }
+    }
+
+    // .sub-menu__link
+    &__link {
+      padding: 8px 12px;
+      font-family: Raleway;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 13px;
+      line-height: 154%;
+      color: #214e41;
+      &:hover {
+        background-color: $accent;
+        color: white;
+      }
+    }
+  }
+}
+.menu.active {
+  & .sub-menu__list {
+    display: block;
   }
 }
 
-.sub-menu {
-  // .sub-menu__list
-  &__list {
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $accent;
+  border-radius: $btn-border-radius;
+  @media (min-width: 960px) {
+    &:hover {
+      color: white;
+      //opacity: 0.3;
+      &.btn {
+        background-color: rgba(#000000, 0.4);
+      }
+    }
   }
-
-  // .sub-menu__link
+  // .btn__link
   &__link {
+    padding: 10px 14px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 143%;
+    color: #ffffff;
   }
 }
 
-.language {
-  // .language__list
-  &__list {
+.arrow {
+  position: absolute;
+  right: 10px;
+  top: 8px;
+  width: 10px;
+  height: 10px;
+  border-bottom: 2px solid $accent;
+  border-left: 2px solid $accent;
+  transform: rotate(-45deg);
+}
+
+.menu__arrow {
+}
+
+@media (max-width: 960px) {
+  .header__burger {
+    cursor: pointer;
+    margin-right: 10px;
+    display: flex;
+    width: 30px;
+    height: 20px;
+    position: relative;
+    & span {
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: black;
+      top: 9px;
+      transition: 0.3s;
+    }
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: black;
+      transition: 0.3s;
+    }
+    &::after {
+      bottom: 0;
+    }
+    &::before {
+      top: 0;
+    }
   }
 
-  // .language__link
-  &__link {
+  .header__burger.active {
+    & span {
+      transform: scale(0);
+    }
+    &::after {
+      bottom: 9px;
+      transform: rotate(-45deg);
+    }
+    &::before {
+      top: 9px;
+      transform: rotate(45deg);
+    }
   }
 }
