--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,9 +1,5 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap-reboot.css";
 
-@import url(https://fonts.googleapis.com/css?family=Raleway:regular,700,900&display=swap);
-
-@import url(https://fonts.googleapis.com/css?family=Roboto:regular,700&display=swap);
-
 ::-webkit-input-placeholder {
   color: #666;
 }
@@ -51,7 +47,7 @@ textarea:required:valid {
 
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -60,7 +56,7 @@ body {
 }
 
 body {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: #214e41;
@@ -100,13 +96,14 @@ ul {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .__container {
   max-width: 1200px;
   padding: 0 16px;
+  margin: 0 auto;
 }
 
 .__header-container {
@@ -117,14 +114,278 @@ ul {
 
 .page {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
 .footer {
+  background-color: #214e41;
+}
+
+.footer__container {
+  padding: 80px 0 50px 0;
+  color: #fff;
+}
+
+.footer__body {
+  padding-bottom: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: no-wrap;
+  flex-wrap: no-wrap;
+}
+
+.footer__body > * {
+  margin-top: 25px;
+}
+
+.footer__logo {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 98px;
+  flex: 0 0 98px;
+}
+
+.footer__navigation {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  padding: 0 100px;
+}
+
+.footer__contacts {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 355px;
+  flex: 0 0 355px;
+}
+
+.footer__text {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  border-top: 1px solid #fff;
+  padding-top: 30px;
+}
+
+.footer__text p:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.footer__text-phone {
+  margin-left: 15px;
+}
+
+.footer__copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 90px;
+}
+
+.footer__copyright-text {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+}
+
+.footer__copyright-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.footer__copyright-link {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  padding: 6px 10px;
+}
+
+.footer__copyright-link:not(:last-child) {
+  border-right: 1px solid #fff;
+}
+
+.nav-footer__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  min-width: 320px;
+}
+
+.nav-footer__column {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 150px;
+  flex: 0 0 150px;
+}
+
+.nav-footer__column:not(:last-child) {
+  margin-right: 40px;
+}
+
+.nav-footer__title {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 185%;
+  letter-spacing: 0.02px;
+  text-transform: uppercase;
+  padding: 0px 10px;
+}
+
+.nav-footer__list-item {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 169%;
+}
+
+.nav-footer__list-item a {
+  padding: 4px 10px;
+  width: 100%;
+}
+
+.nav-footer__list-item:not(:last-child) {
+  margin: 3px 0;
+}
+
+.contacts__title {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 185%;
+  letter-spacing: 0.02px;
+  text-transform: uppercase;
+  margin-bottom: 19px;
+}
+
+.contacts__text {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  margin-bottom: 16px;
+}
+
+.contacts__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.contacts__input {
+  height: 52px;
+  width: 100%;
+  padding: 15px 23px;
+  background: inherit;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.contacts__input::-webkit-input-placeholder {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  color: #ffffff;
+}
+
+.contacts__input::-moz-placeholder {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  color: #ffffff;
+}
+
+.contacts__input:-ms-input-placeholder {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  color: #ffffff;
+}
+
+.contacts__input::-ms-input-placeholder {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  color: #ffffff;
+}
+
+.contacts__input::placeholder {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.02px;
+  color: #ffffff;
+}
+
+.contacts__btn {
+  width: 52px;
+  height: 52px;
+  border: 0;
+  background-color: white;
+  background-image: url("../../img/src/icon_right_arrow.png");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
+.contacts__social {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social__icon {
+  width: 28px;
+  height: 28px;
+}
+
+.social__icon:not(:last-child) {
+  margin-right: 25px;
+}
+
+.social__iconimg {
+  max-width: 100%;
 }
 
 .header__container {
@@ -134,11 +395,11 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .header__navigation {
@@ -146,8 +407,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
 }
 
@@ -182,8 +443,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .nav-menu__item {
@@ -195,8 +456,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   height: 40px;
   padding: 5px 15px;
   font-family: Raleway;
@@ -267,11 +528,11 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background-color: #43806c;
   border-radius: 6px;
 }
@@ -295,11 +556,37 @@ ul {
   border-bottom: 2px solid #43806c;
   border-left: 2px solid #43806c;
   -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+@media (min-width: 366px) {
+  .footer__copyright-text br {
+    display: none;
+  }
 }
 
 @media (min-width: 960px) {
+  .footer__body {
+    padding-bottom: 71px;
+  }
+
+  .footer__text {
+    padding-top: 71px;
+  }
+
+  .footer__text p:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .footer__text-phone:hover {
+    opacity: 0.7;
+  }
+
+  .nav-footer__list-item a:hover {
+    opacity: 0.6;
+  }
+
   .menu__list > li:hover .sub-menu__list {
     display: block;
   }
@@ -402,22 +689,22 @@ ul {
 
   .header__burger.active span {
     -webkit-transform: scale(0);
-        -ms-transform: scale(0);
-            transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
   }
 
   .header__burger.active::after {
     bottom: 9px;
     -webkit-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-            transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
   }
 
   .header__burger.active::before {
     top: 9px;
     -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
   }
 }
 
@@ -427,9 +714,37 @@ ul {
   }
 }
 
+@media (max-width: 880px) {
+  .footer__body {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+
+  .footer__contacts {
+    -ms-flex-negative: 1;
+    flex-shrink: 1;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+  }
+}
+
 @media (max-width: 600px) {
+  .footer__copyright {
+    display: block;
+    text-align: center;
+  }
+
   .header__request-btn {
     display: none;
+  }
+}
+
+@media (max-width: 528px) {
+  .nav-footer__row {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
@@ -447,6 +762,48 @@ ul {
   .header__language {
     margin-left: 5px;
     margin-right: 10px;
+  }
+}
+
+@media (max-width: 420px) {
+  .footer__copyright {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 401px) {
+  .footer__container {
+    padding: 4px 16px 24px 16px;
+  }
+}
+
+@media (max-width: 400px) {
+  .footer__navigation {
+    padding: 0 16px;
+  }
+}
+
+@media (max-width: 1280px) and (min-width: 881px) {
+  .footer__container {
+    padding: 60px 24px 50px 24px;
+  }
+}
+
+@media (max-width: 880px) and (min-width: 401px) {
+  .footer__container {
+    padding: 60px 24px 50px 24px;
+  }
+}
+
+@media (max-width: 1200px) and (min-width: 399px) {
+  .footer__navigation {
+    padding: 0 40px;
+  }
+}
+
+@media (max-width: 880px) and (min-width: 421px) {
+  .footer__copyright {
+    margin-top: 40px;
   }
 }
 
