--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -4,8 +4,9 @@ $accent: #43806c; // Accent Color
 $whitetext: #fff;
 $fontsize: 14px; // Body Font Size
 $textcolor: #214e41; // Text Color
+$footerbackground: #214e41;
 $lineheight: 1.5; // Document Line Height
-$userfont: "Raleway"; // User Font Family
+$userfont: "Raleway", sans-serif; // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif; // System Font Family
 $btn-border-radius: 6px;
 
@@ -21,8 +22,10 @@ $header-container-width: 1350px;
 //only english  &display=swap
 //with cyrilic &display=swap&subset=cyrillic-ext
 
-@import url(https://fonts.googleapis.com/css?family=Raleway:regular,700,900&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Roboto:regular,700&display=swap);
+//@import url(https://fonts.googleapis.com/css?family=Raleway:regular,700,900&display=swap);
+//@import url("https://fonts.googleapis.com/css?family=Roboto:regular,700&display=swap");
+
+//@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400,700,900&display=swap");
 
 // GENERAL CSS SETTINGS
 
