--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,4 +2,5 @@
 @import "./blocks/_general";
 @import "./blocks/_footer";
 @import "./blocks/_header";
+@import "./blocks/_intro";
 //@import "./blocks/**/*";
