--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,4 +3,5 @@
 @import "./blocks/_footer";
 @import "./blocks/_header";
 @import "./blocks/_intro";
+@import "./blocks/_why";
 //@import "./blocks/**/*";
