--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,8 @@
-@import "_config";
-@import "./blocks/_general";
-@import "./blocks/_footer";
-@import "./blocks/_header";
-@import "./blocks/_intro";
-@import "./blocks/_why";
+@import "config";
+@import "./blocks/general";
+@import "./blocks/footer";
+@import "./blocks/header";
+@import "./blocks/intro";
+@import "./blocks/why";
+@import "./blocks/advantage";
 //@import "./blocks/**/*";
