--- a/app/styles/blocks/_footer.scss
+++ b/app/styles/blocks/_footer.scss
@@ -2,7 +2,7 @@
   background-color: $footerbackground;
   // .footer__container
   &__container {
-    padding: 80px 0 50px 0;
+    padding: 80px 16px 50px 16px;
     color: #fff;
     @media (max-width: 1280px) and (min-width: 881px) {
       padding: 60px 24px 50px 24px;
@@ -254,7 +254,7 @@
     height: 52px;
     border: 0;
     background-color: white;
-    background-image: url("../../img/src/icon_right_arrow.png");
+    background-image: url("../../img/dist/icon_right_arrow.png");
     background-position: 50% 50%;
     background-repeat: no-repeat;
   }
