--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,4 +5,5 @@
 @import "./blocks/intro";
 @import "./blocks/why";
 @import "./blocks/advantage";
+@import "./blocks/plans";
 //@import "./blocks/**/*";
