--- a/app/css/main.css
+++ b/app/css/main.css
@@ -135,6 +135,61 @@ ul {
   color: #214e41;
 }
 
+.info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 60px;
+}
+
+.info__body,
+.info__img {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 50%;
+  flex: 1 1 50%;
+}
+
+.info__body {
+  padding-right: 44px;
+}
+
+.info__pretitle {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 154%;
+  letter-spacing: 0.05px;
+  text-transform: uppercase;
+  color: #43806c;
+  margin-bottom: 20px;
+}
+
+.info__title {
+  margin-bottom: 34px;
+}
+
+.info__text {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 167%;
+  letter-spacing: 0.02px;
+  color: #757575;
+}
+
+.info__img {
+  text-align: right;
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+
+.info__img img {
+  max-width: 100%;
+  height: auto;
+}
+
 .footer {
   background-color: #214e41;
 }
@@ -1009,59 +1064,12 @@ ul {
   color: #ffffff;
 }
 
-.plans__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 60px;
-}
-
-.plans__info-body,
-.plans__info-img {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 50%;
-  flex: 1 1 50%;
-}
-
-.plans__info-body {
-  padding-right: 44px;
-}
-
 .plans__info-pretitle {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 13px;
-  line-height: 154%;
-  letter-spacing: 0.05px;
-  text-transform: uppercase;
   color: #43806c;
-  margin-bottom: 20px;
-}
-
-.plans__info-title {
-  margin-bottom: 34px;
 }
 
 .plans__info-text {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 167%;
-  letter-spacing: 0.02px;
   color: #757575;
-}
-
-.plans__info-img {
-  text-align: right;
-  -ms-flex-item-align: center;
-  align-self: center;
-}
-
-.plans__info-img img {
-  max-width: 100%;
-  height: auto;
 }
 
 .profits {
@@ -1362,12 +1370,12 @@ ul {
 }
 
 @media (max-width: 729px) {
-  .plans__info {
+  .info {
     display: block;
     margin-bottom: 40px;
   }
 
-  .plans__info-img {
+  .info__img {
     margin-top: 20px;
     text-align: center;
   }
