--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,4 +6,5 @@
 @import "./blocks/why";
 @import "./blocks/advantage";
 @import "./blocks/plans";
+@import "./blocks/howItWorts";
 //@import "./blocks/**/*";
