--- a/app/styles/blocks/_general.scss
+++ b/app/styles/blocks/_general.scss
@@ -49,19 +49,17 @@ ul {
   }
 
   // .page__advantage
-  &__advantage {
+  &__advantage,
+  &__plans,
+  &__howItWorts {
     margin-top: 120px;
     @media (max-width: 960px) {
       margin-top: 40px;
     }
   }
 
-  // .page__plans
-  &__plans {
-    margin-top: 120px;
-    @media (max-width: 960px) {
-      margin-top: 40px;
-    }
+  // .page__howItWorts
+  &__howItWorts {
   }
 }
 
@@ -81,14 +79,15 @@ ul {
   font-size: 36px;
   line-height: 128%;
   color: #214e41;
+  @media (max-width: 400px) {
+    font-size: 30px;
+  }
 }
 
 .info {
   display: flex;
-  margin-bottom: 60px;
   @media (max-width: 729px) {
     display: block;
-    margin-bottom: 40px;
   }
 
   &__body,
@@ -114,6 +113,9 @@ ul {
 
   &__title {
     margin-bottom: 34px;
+    @media (max-width: 400px) {
+      margin-bottom: 24px;
+    }
   }
 
   &__text {
@@ -124,14 +126,41 @@ ul {
     line-height: 167%;
     letter-spacing: 0.02px;
     color: #757575;
+    &:not(:last-child) {
+      margin-bottom: 26px;
+    }
+  }
+
+  &__link {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 100%;
+    text-align: center;
+    letter-spacing: 0.02px;
+    color: #214e41;
+    text-align: left;
+    max-width: 107px;
+    border-bottom: 2px solid #214e41;
+    & a {
+      padding: 2px 15px 0;
+      display: flex;
+      text-align: center;
+      white-space: pre-wrap;
+    }
+    @media (min-width: 960px) {
+      &:hover {
+        opacity: 0.6;
+      }
+    }
   }
 
   &__img {
-    text-align: right;
     align-self: center;
+    text-align: center;
     @media (max-width: 729px) {
       margin-top: 20px;
-      text-align: center;
     }
     & img {
       max-width: 100%;
