--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,4 +7,5 @@
 @import "./blocks/advantage";
 @import "./blocks/plans";
 @import "./blocks/howItWorts";
+@import "./blocks/employe";
 //@import "./blocks/**/*";
