--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,4 +8,5 @@
 @import "./blocks/plans";
 @import "./blocks/howItWorts";
 @import "./blocks/employe";
+@import "./blocks/slider";
 //@import "./blocks/**/*";
