--- a/app/css/main.css
+++ b/app/css/main.css
@@ -116,11 +116,13 @@ ul {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
+  min-width: 0;
 }
 
 .page__advantage,
 .page__plans,
-.page__howItWorts {
+.page__howItWorts,
+.page__customers {
   margin-top: 120px;
 }
 
@@ -1174,6 +1176,60 @@ ul {
   padding-bottom: 112px;
 }
 
+.customers_title {
+  text-align: center;
+}
+
+.customers__container {
+  position: relative;
+}
+
+.customers__slider {
+  height: 70px;
+  max-width: 90%;
+  margin-top: 115px;
+}
+
+.customers__slider-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.customers__slider-img {
+  width: 146px;
+}
+
+.customers__slider-img img {
+  max-width: 100%;
+}
+
+.customers__slider-button-prev,
+.customers__slider-button-next {
+  width: 30px;
+  height: 23px;
+  position: absolute;
+  bottom: 25px;
+  cursor: pointer;
+  z-index: 5;
+}
+
+.customers__slider-button-prev {
+  left: 15px;
+  background: url("../../img/dist/slider_left_arrow_icon.png") 0 0 no-repeat;
+}
+
+.customers__slider-button-next {
+  right: 15px;
+  background: url("../../img/dist/slider_right_arrow_icon.png") 0 0 no-repeat;
+}
+
 @media (min-width: 366px) {
   .footer__copyright-text br {
     display: none;
@@ -1279,7 +1335,8 @@ ul {
 @media (max-width: 960px) {
   .page__advantage,
   .page__plans,
-  .page__howItWorts {
+  .page__howItWorts,
+  .page__customers {
     margin-top: 40px;
   }
 
@@ -1409,12 +1466,6 @@ ul {
   }
 }
 
-@media (max-width: 960px) and (max-width: 401px) {
-  .why__body {
-    padding: 24px;
-  }
-}
-
 @media (max-width: 959px) {
   .header__request-btn {
     margin-left: 0;
@@ -1523,6 +1574,10 @@ ul {
 
   .tabs__tab a {
     white-space: normal;
+  }
+
+  .customers__slider {
+    margin-top: 25px;
   }
 }
 
@@ -1679,6 +1734,10 @@ ul {
   .why__pluses {
     margin-bottom: 40px;
   }
+
+  .why__body {
+    padding: 24px;
+  }
 }
 
 @media (max-width: 1200px) and (min-width: 961px) {
@@ -1722,5 +1781,17 @@ ul {
     -webkit-box-flex: 0;
     -ms-flex: 0 1 50%;
     flex: 0 1 50%;
+  }
+}
+
+@media (max-width: 1100px) and (min-width: 960px) {
+  .customers__slider {
+    margin-top: 70px;
+  }
+}
+
+@media (max-width: 959px) and (min-width: 500px) {
+  .customers__slider {
+    margin-top: 50px;
   }
 }
