--- a/app/styles/blocks/_why.scss
+++ b/app/styles/blocks/_why.scss
@@ -24,7 +24,7 @@
     @media (max-width: 1200px) and (min-width: 961px) {
       padding: 37px 40px;
     }
-    @media (max-width: 960px) and (max-width: 401px) {
+    @media (max-width: 960px) and (min-width: 401px) {
       padding: 24px;
     }
     @media (max-width: 400px) {
