--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,4 +9,5 @@
 @import "./blocks/howItWorts";
 @import "./blocks/employe";
 @import "./blocks/slider";
+@import "./blocks/featuring";
 //@import "./blocks/**/*";
