--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,4 +10,5 @@
 @import "./blocks/employe";
 @import "./blocks/slider";
 @import "./blocks/featuring";
+@import "./blocks/letstalk";
 //@import "./blocks/**/*";
