--- a/app/css/main.css
+++ b/app/css/main.css
@@ -122,7 +122,8 @@ ul {
 .page__advantage,
 .page__plans,
 .page__howItWorts,
-.page__customers {
+.page__customers,
+.page__letstalk {
   margin-top: 120px;
 }
 
@@ -1280,6 +1281,41 @@ ul {
   color: #214e41;
 }
 
+.letstalk {
+  background-color: #e3eeed;
+}
+
+.letstalk__container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.letstalk__info-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.letstalk__wrap {
+  max-width: 423px;
+  margin-left: 120px;
+}
+
+.letstalk__info-title {
+  margin-bottom: 46px;
+}
+
+.letstalk__info-text {
+  margin-bottom: 60px;
+}
+
+.letstalk__btn {
+  max-width: 125px;
+}
+
 @media (min-width: 366px) {
   .footer__copyright-text br {
     display: none;
@@ -1386,7 +1422,8 @@ ul {
   .page__advantage,
   .page__plans,
   .page__howItWorts,
-  .page__customers {
+  .page__customers,
+  .page__letstalk {
     margin-top: 40px;
   }
 
@@ -1603,6 +1640,33 @@ ul {
 
   .howItWorts__info-body {
     padding-bottom: 0px;
+  }
+
+  .letstalk__info-title,
+  .letstalk__info-text {
+    font-size: 28px;
+  }
+
+  .letstalk__wrap {
+    margin-left: 30px;
+    position: relative;
+    margin-top: 30px;
+  }
+
+  .letstalk__info-title {
+    margin-bottom: 20px;
+  }
+
+  .letstalk__info-text {
+    margin-bottom: 25px;
+  }
+
+  .letstalk__btn {
+    position: absolute;
+    bottom: 25px;
+    left: 50%;
+    width: 125px;
+    height: 50px;
   }
 }
 
@@ -1881,5 +1945,38 @@ ul {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     padding: 0 15px;
+  }
+}
+
+@media (max-width: 1150px) and (min-width: 910px) {
+  .letstalk__wrap {
+    margin-left: 60px;
+  }
+
+  .letstalk__info-title {
+    margin-bottom: 30px;
+  }
+
+  .letstalk__info-text {
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 909px) and (min-width: 730px) {
+  .letstalk__info-title,
+  .letstalk__info-text {
+    font-size: 30px;
+  }
+
+  .letstalk__wrap {
+    margin-left: 30px;
+  }
+
+  .letstalk__info-title {
+    margin-bottom: 20px;
+  }
+
+  .letstalk__info-text {
+    margin-bottom: 25px;
   }
 }
